add pages descriptions

--- a/docs/admin/05.install/40.post_install/10.find_ip.mdx
+++ b/docs/admin/05.install/40.post_install/10.find_ip.mdx
@@ -1,5 +1,6 @@
 ---
-title: Finding your server's local IP
+title: Find your server's local IP
+description: "Who is your server on your local network"
 ---
 
 import Tabs from '@theme/Tabs';
