--- a/docs/admin/05.install/40.post_install/15.port_forwarding.mdx
+++ b/docs/admin/05.install/40.post_install/15.port_forwarding.mdx
@@ -1,5 +1,6 @@
 ---
 title: Configure port-forwarding
+description: "Make your server accessible from outside your home"
 ---
 
 If you are self-hosting at home and without a VPN, you need to forward ports on your home router ("Internet box"). The sketch below tries to briefly summarize the role and necessity of port forwarding when setting up a server at home.
