--- a/docs/admin/05.install/40.post_install/20.dns_config.mdx
+++ b/docs/admin/05.install/40.post_install/20.dns_config.mdx
@@ -1,5 +1,6 @@
 ---
 title: DNS zone configuration
+description: "Add a domain for easier access"
 ---
 
 DNS (domain name system) is a system that converts human-readable addresses
