--- a/docs/admin/05.install/20.install_on/remote_server.mdx
+++ b/docs/admin/05.install/20.install_on/remote_server.mdx
@@ -7,6 +7,8 @@ sidebar_custom_props:
 pagination_next: admin/install/install_on/on_top_of_debian
 ---
 
+import InstallScript from "./_install_script.mdx";
+
 ## <FAIcon icon="fa-list-alt"/> Pre-requisites
 
 - A dedicated or virtual private server with Debian 12 (Bookworm) <small>(with **kernel >= 6.1**)</small> preinstalled, 512MB RAM and 16GB capacity (at least)
@@ -16,4 +18,4 @@ pagination_next: admin/install/install_on/on_top_of_debian
 
 You will need to connect to your server via `ssh`.
 
-Once you have a shell, you can follow the generic instructions to [install YunoHost on Debian](/admin/install/install_on/on_top_of_debian#-run-the-install-script).
+<InstallScript />
