--- a/docs/admin/05.install/40.post_install/05.configuration.mdx
+++ b/docs/admin/05.install/40.post_install/05.configuration.mdx
@@ -27,7 +27,7 @@ For a VPS, please use the public IP address instead of the local domain or addre
     :::
 
     You should then land on this page:
-    <Figure caption="Preview of the Web initial configuration page" src="/img/postinstall_web.png"/>
+    <Figure caption="Preview of the Web initial configuration page" src="/img/webadmin/postinstall_web.png"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
     You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/admin/command_line).
@@ -95,7 +95,7 @@ Especially, installations on WSL or virtual machines will likely not be reachabl
   <TabItem value="web" label="(Recommended) From the web interface">
     To run a diagnosis, go on Web Admin in the Diagnosis section. Click Run initial diagnosis and you should get a screen like this:
 
-    <Figure caption="Preview of the diagnostic panel" src="/img/diagnostic.png"/>
+    <Figure caption="Preview of the diagnostic panel" src="/img/webadmin/diagnostic.png"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
     ```bash
