--- a/docs/user/10.email_migration.mdx
+++ b/docs/user/10.email_migration.mdx
@@ -1,5 +1,5 @@
 ---
-title: Migrating email from an email provider to a YunoHost instance
+title: Migrate emails to YunoHost
 ---
 
 *[Documentation linked to YunoHost email](/admin/email)*.
