Update Franciliens.net prices (#2586)
* We simplified pricing for adhesion now only 15€ in every cases
* We recently vote to lower the price of the reduce price vpn

--- a/docs/admin/03.self_hosting/10.providers/15.vpn/index.mdx
+++ b/docs/admin/03.self_hosting/10.providers/15.vpn/index.mdx
@@ -43,7 +43,7 @@ If you try an other VPN provider that include **public dedicated ipv4 and port f
 | [Baionet](https://www.baionet.fr/nos-services/vpn/)    | ✘ (wireguard)               | ?    | ?         | ?         | 2,5 € ou 5 € / mois | 5€ ou 40€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
 | [FAImaison](https://www.faimaison.net/services/vpn.html)    | ✔ (.cube)               | ✘   | ✔         | ✘        | Prix libre | 8 ou 16€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
 | [French Data Network](https://www.fdn.fr/services/vpn/)    | ✔ (.cube)               | ✔   | ✔         | ✔        | 6,5€ à 23€ / mois | 15 ou 30€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
-| [Franciliens](https://www.franciliens.net/acces-internet/vpn/)    | ✔ (.cube + [internetcube](https://internetcu.be))               | ✔   | ✔         | ✔        | 6,5€ à 23€ / mois | 15 ou 30€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
+| [Franciliens](https://www.franciliens.net/acces-internet/vpn/)    | ✔ (.cube + [internetcube](https://internetcu.be))               | ✔   | ✔         | ✔        | 4€ à 23€ / mois | 15€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
 | [Grifon](https://grifon.fr/services/vpn/)    | ✔ (manuelle) + L2TP/IPSec               | ✔   | ✔         | ✔        | 5€ / mois | 15€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
 | [Igwan.net](https://igwan.net)    | ✘ (L2TP/IPSec)               | ?    | ?         | ?         | 4 ou 8€ / mois | ? / an | <HighlightFFDN/> <HighlightNonProfit/> |
 | [Illyse](https://www.illyse.net/acces-internet-par-vpn/)    | ✔ (manuelle)               | ✔    | ✔         | ✔         | 6 ou 8€ / mois | 20€ / an | <HighlightFFDN/> <HighlightNonProfit/> |
