update packaging and dev docs

--- a/docs/dev/index.mdx
+++ b/docs/dev/index.mdx
@@ -1,8 +1,11 @@
 ---
-sidebar_label: Contribute
 sidebar_position: 0
-title: Contribute to YunoHost
+title: Developer documentation
 ---
+
+:::warning[FIXME]
+This section is under refactoring.
+:::
 
 ### YunoHost depends exclusively on the participation of people like you.
 
