--- a/docs/packaging/10.manifest/index.mdx
+++ b/docs/packaging/10.manifest/index.mdx
@@ -1,6 +1,5 @@
 ---
-title: Writing the app manifest
-sidebarCollapsed: false
+title: The manifest
 ---
 
 The app's `manifest.toml` can be seen as the ID card of the app. It declares various basic metadata such as the id, name, description of the app, its version, install questions to be asked to the admin prior to installation, etc.
