--- a/docs/packaging/20.scripts/index.mdx
+++ b/docs/packaging/20.scripts/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Writing app scripts
+title: The scripts
 ---
 
 App scripts are the essential logic defining what happens when an app is `install`ed, `remove`d, `upgrade`d, `backup`ed, or `restore`d. They are written in [Bash](https://en.wikipedia.org/wiki/Bash_(Unix_shell)) which is the same stuff you type in interactive mode in a terminal, though we added a bunch of custom YunoHost functions that we call `helpers` to standardize many common operations - for example adding the nginx configuration.
