--- a/docs/packaging/30.doc.mdx
+++ b/docs/packaging/30.doc.mdx
@@ -1,5 +1,5 @@
 ---
-title: Adding documentation to your app
+title: Documentation
 ---
 
 Properly documenting your app is important for user experience ;).  
