cleanup yunohost logos

--- a/docs/admin/02.what_is_yunohost/index.mdx
+++ b/docs/admin/02.what_is_yunohost/index.mdx
@@ -50,5 +50,5 @@ You can host your friends, your family and your company safely and with ease, bu
 
 Black and white YunoHost PNG logo by ToZz (400 × 400 px). Licence: CC-BY-SA 4.0. Logos and other artwork are available in [the Artworks repository](https://github.com/YunoHost/yunohost-artwork).
 
-<img src={require('/img/icons/logo-ynh_black_300dpi.png').default} width="220" id="darklogo" style={{padding: "1rem"}}/>
-<img src={require('/img/icons/logo-ynh_white_300dpi.png').default} width="220" id="whitelogo" style={{padding: "1rem"}}/>
+<img src="https://raw.githubusercontent.com/YunoHost/yunohost-artwork/refs/heads/main/logos/png/yunohost-logo_black.png" width="220" id="darklogo"/>
+<img src="https://raw.githubusercontent.com/YunoHost/yunohost-artwork/refs/heads/main/logos/png/yunohost-logo_white.png" width="220" id="whitelogo"/>
