--- a/docs/dev/05.doc/02.markdown_guide.mdx
+++ b/docs/dev/05.doc/02.markdown_guide.mdx
@@ -106,18 +106,18 @@ All that remains is to designate the anchor to the text you want to make interac
 To display images, the principle is the same as for links, except that a `!` is added before the text to be displayed, which is considered here as the text to be displayed if the image cannot be loaded. A description of the image is appropriate.
 
 ```markdown
-![YunoHost Logo](/img/icons/logo-ynh.png)
+![YunoHost Logo](/img/icons/logo-ynh.svg)
 ```
 
-![YunoHost Logo](/img/icons/logo-ynh.png)
+![YunoHost Logo](/img/icons/logo-ynh.svg)
 
 It is possible to make a link with an image, for example:
 
 ```markdown
-[![YunoHost Logo](/img/icons/logo-ynh.png)](/dev/doc/)
+[![YunoHost Logo](/img/icons/logo-ynh.svg)](/dev/doc/)
 ```
 
-[![YunoHost Logo](/img/icons/logo-ynh.png)](/dev/doc/)
+[![YunoHost Logo](/img/icons/logo-ynh.svg)](/dev/doc/)
 
 The insert of *text to be displayed if the image cannot be loaded* between the brackets in the image link is not mandatory but strongly recommended.
 
