--- a/i18n/fr/docusaurus-plugin-content-docs/current/dev/05.doc/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/dev/05.doc/02.markdown_guide.mdx
@@ -102,18 +102,18 @@ Il ne reste plus qu'à désigner l'ancre au texte que l'on souhaite rendre inter
 Pour afficher des images, le principe est identique aux liens, excepté l'ajout d'un `!` avant le texte à afficher qui est ici considéré comme le texte à afficher en cas d'impossibilité de chargement de l'image. Une description de l'image convient.
 
 ```markdown
-![Logo YunoHost](/img/icons/logo-ynh.png)
+![Logo YunoHost](/img/icons/logo-ynh.svg)
 ```
 
-![Logo YunoHost](/img/icons/logo-ynh.png)
+![Logo YunoHost](/img/icons/logo-ynh.svg)
 
 Il est possible de faire un lien avec une image, exemple :
 
 ```markdown
-[![Logo YunoHost](/img/icons/logo-ynh.png)](/dev/doc/)
+[![Logo YunoHost](/img/icons/logo-ynh.svg)](/dev/doc/)
 ```
 
-[![Logo YunoHost](/img/icons/logo-ynh.png)](/dev/doc/)
+[![Logo YunoHost](/img/icons/logo-ynh.svg)](/dev/doc/)
 
 L'encart de *texte à afficher en cas d'impossibilité de chargement de l'image* entre les crochets dans le lien de l'image n'est pas obligatoire mais fortement recommandé.
 
