Fix link in packaging doc

--- a/docs/packaging/05.structure.mdx
+++ b/docs/packaging/05.structure.mdx
@@ -37,6 +37,6 @@ The [scripts](./scripts) are called by YunoHost when operations are started by t
 
 The configuration files are templates that are filled and installed by the scripts, for example `nginx` or `systemd` or specific configs.
 
-[Patches](./patches) are applied when downloading the upstream sources.
+Patches are applied when downloading the upstream sources.
 
 The [documentation](./doc) is used to show messages before / after install, upgrade, and in the webadmin.
